# fly_in

./: .flake8  .gitignore  Makefile  README.md  __init__.py  __main__.py  assets.py  drone.py  drone_sprite.py  fleet_planner.py  game.py  layers.py  main.py  map_layout.py  parser.py  pathfinding.py  pyproject.toml  render.py  routing_costs.py  rules.MD  simulation_output.py  sprites.py  subject.md  test_drone_sprite.py  test_map.txt  test_routing.py  timed_pathfinding.py
fly_in/: __init__.py  __main__.py  assets.py  drone.py  drone_sprite.py  fleet_planner.py  layers.py  map_layout.py  parser.py  render.py  routing_costs.py  simulation_output.py  sprites.py  timed_pathfinding.py
tests/: test_simulation_output.py  test_single_drone_movement.py
unit_tests/: 01_the_impossible_dream.txt  README_errors.txt  error_duplicate_connection.txt  error_duplicate_nb_drones.txt  error_invalid_conn_metadata_key.txt  error_invalid_hub_metadata_key.txt  error_invalid_zone_type.txt  error_missing_equals_in_metadata.txt  error_nb_drones_not_first.txt  error_nb_drones_zero.txt  error_negative_drones.txt  error_nonint_link_capacity.txt  error_nonint_max_drones.txt  error_self_connection.txt  error_zero_max_drones.txt  one_zone_txt  test_map.txt  two_zones_valid.txt
unit_tests/tests/: test_parser_error_maps.py
