[project]
name = "fly-in"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "pygame-ce>=2.5.6",
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*"]
ignore_missing_imports = true
